--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
     <div id="update-modal" class="update-modal hidden">
         <div class="update-modal-content">
             <div class="update-modal-icon">
-                <i class="fa-solid fa-arrow-down-to-bracket"></i>
+                <i class="fa-solid fa-download"></i>
             </div>
             <div class="update-modal-body">
                 <h2>New Update Available!</h2>
